<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayBackground"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/username_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="9dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grayBackground"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/email"
            android:textColorHint="@color/grayBackground"
            android:inputType="textEmailAddress"
            android:padding="9dp"
            android:textColor="@color/black"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:textColorHint="@color/grayBackground"
            android:inputType="numberPassword"
            android:padding="9dp"
            android:textColor="@color/black"
            android:autofillHints="" />

        <TextView
            android:id="@+id/alreadyhaveaccount_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:padding="10dp"
            android:text="@string/already_have_account"
            android:textColor="@color/black"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hapticFeedbackEnabled="false"
            android:padding="15dp"
            android:text="@string/sign_up"
            app:cornerRadius="10dp"
            app:rippleColor="@color/colorPrimary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/google_btn_id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@android:color/white"
                android:drawableLeft="@drawable/common_google_signin_btn_icon_light"
                android:padding="15dp"
                android:text="@string/google"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/facebook_btn_id"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:padding="15dp"
                android:text="@string/facebook"
                app:cornerRadius="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_phone_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_with_phone"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

    </LinearLayout>
</LinearLayout>