<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_police"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/layout_ambulance"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_police"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_police" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/police"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/iv_police"
                app:layout_constraintStart_toStartOf="@id/iv_police"
                app:layout_constraintTop_toBottomOf="@id/iv_police" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_ambulance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toTopOf="@id/layout_police"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/layout_fire_brigade"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layout_police">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_ambulance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_ambulance" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ambulance"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/iv_ambulance"
                app:layout_constraintStart_toStartOf="@id/iv_ambulance"
                app:layout_constraintTop_toBottomOf="@id/iv_ambulance" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/layout_fire_brigade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:cardCornerRadius="8dp"
        app:contentPadding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="@id/layout_ambulance"
        app:layout_constraintStart_toEndOf="@+id/layout_ambulance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_fire_brigade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_fire_extinguisher" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/fire_brigade"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/iv_fire_brigade"
                app:layout_constraintStart_toStartOf="@id/iv_fire_brigade"
                app:layout_constraintTop_toBottomOf="@id/iv_fire_brigade" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!--
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_firebrigade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"
            android:background="@color/fb_color"
            android:drawableStart="@drawable/ic_fire_extinguisher"
            android:drawablePadding="5dp"
            android:paddingHorizontal="5dp"
            android:text="@string/firebrigade"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_ambulance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ambulance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fb_color"
            android:drawableStart="@drawable/ic_ambulance"
            android:drawablePadding="5dp"
            android:paddingHorizontal="5dp"
            android:text="@string/ambulance"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btn_police"
            app:layout_constraintEnd_toEndOf="@+id/btn_firebrigade"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/btn_firebrigade"
            app:layout_constraintTop_toBottomOf="@+id/btn_firebrigade" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_police"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/fb_color"
            android:drawableStart="@drawable/ic_police"
            android:drawablePadding="5dp"
            android:paddingHorizontal="5dp"
            android:text="Police"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_ambulance"
            app:layout_constraintHorizontal_bias="0.439"
            app:layout_constraintStart_toStartOf="@+id/btn_ambulance"
            app:layout_constraintTop_toBottomOf="@+id/btn_ambulance" />-->


</androidx.constraintlayout.widget.ConstraintLayout>